
   - Added argument ncpus to runGSA(). Enables parts of this function to run in 
     parallel, thus decreasing runtime. Requires R package snowfall.

   - Added information about genes in each area of the Venn diagram in the output
     of diffExp().

   - Added volcano plot as optional output of diffExp() and added argument volcanoFC.

   Minor changes:

   - Removed suppressWarnings(), as temporarily introduced in version 1.0.1, in 
     polarPlot() around the calls to radial.plot() since warnings are now fixed in 
     package plotrix.


New in version 1.0.7
====================

   Minor changes:

   - Updated consensusScores() man page.


New in version 1.0.6
====================

   Minor changes:

   - Updated loadMAdata() man page.


New in version 1.0.5
====================

   Minor changes:

   - Updated diffExp() to only use vennDiagram() of the limma package for Venn 
     diagram plotting in order to correct a bug when plotting more than three 
     circles. Also updated the corresponding man page.

   - Updated the SBML section in the loadGSC() man page.


New in version 1.0.4
====================

   Minor changes:

   - Fixed bug in loadMAdata so that also compressed CEL-files (*.CEL.gz) can be 
     loaded correctly.


New in version 1.0.3
====================

   Minor changes:

   - Updated references in vignette.


New in version 1.0.2
====================

   Minor changes:

   - Updated CITATION information.


New in version 1.0.1
====================

   Minor changes:

   - Fixed bug in loadGSC() so that gmt-files are now loaded correctly.

   - Temporarily added suppressWarnings() in polarPlot() around the calls to 
     radial.plot() since warnings appeared for example("radial.plot") in
     plotrix v3.4-6.

   - Updated CITATION information.

   - Fixed typos in DESCRIPTION and piano-package.Rd.

   - Updated the man file for loadGSC().

   - Added URL in DESCRIPTION.


New in version 1.0.0
====================

   Important changes:
