@@ -13,11 +13,20 @@ New in version 1.2.0
 
    - Added volcano plot as optional output of diffExp() and added argument volcanoFC.
 
+   - Added function runGSAhyper() to perform gene set analysis using Fisher's exact test,
+     as an alternative to runGSA.
+
    Minor changes:
 
    - Removed suppressWarnings(), as temporarily introduced in version 1.0.1, in 
      polarPlot() around the calls to radial.plot() since warnings are now fixed in 
      package plotrix.
+
+   - Updated minor details in vignette.
+
+   - Updated diffExp() man page.
+
+   - Updated the main legend of the plot from consensusScores() to make it clearer.
 
 
 New in version 1.0.7
